--- a/workflows/datapack_dataone/update_package_datapack.Rmd
+++ b/workflows/datapack_dataone/update_package_datapack.Rmd
@@ -33,6 +33,25 @@ write_eml(doc, eml_path)
 pkg <- replaceMember(pkg, metadataId, replacement=eml_path)
 ```
 
+### Modify the data files
+
+remove zip files
+```{r, eval = F}
+zipId <- selectMember(dp, name="sysmeta@formatId", value="application/vnd.shp+zip")
+removeMember(dp, zipId, removeRelationships = T)
+```
+
+add an existing data object
+
+```{r, eval = F}
+dataObj <- getDataObject(d1c, id="urn:uuid: here", lazyLoad=T, limit="1TB")
+dp <- addMember(dp, dataObj, mo=metadataId)
+```
+
+```{block, type = "note"}
+If you want to change the formatId please use `updateSystemMetadata`
+```
+
 ### Publish update
 
 Publishing a DOI with a UUID
