add missed eval = F

--- a/workflows/datapack_dataone/update_package_datapack.Rmd
+++ b/workflows/datapack_dataone/update_package_datapack.Rmd
@@ -7,7 +7,7 @@ Once you have updated the data objects and saved the metadata to a file, we can 
 ### Get the package
 
 Setting the node is done slightly differently:
-```{r}
+```{r, eval = F}
 d1c <- dataone::D1Client("STAGING", "urn:node:mnTestARCTIC")
 ```
 
