--- a/workflows/datapack_dataone/datapack_background.Rmd
+++ b/workflows/datapack_dataone/datapack_background.Rmd
@@ -13,8 +13,19 @@ Data packages are a class that has slots for `relations` (provenance), `objects`
 
 ### Navigating data packages
 
-Using this example
+Using this example on arcticdata.io
 ```{r}
+d1c <- dataone::D1Client("PROD", "urn:node:ARCTIC")
 
+dp <- dataone::getDataPackage(d1c, "resource_map_urn:uuid:1f9eee7e-2d03-43c4-ad7f-f300e013ab28")
+```
+
+```{r}
+dp@objects
+```
+
+
+```{r}
+dp@relations$relations
 ```
 
