add more details on how to publish with a new DOI and a pre-issued DOI

--- a/workflows/datapack_dataone/update_package_datapack.Rmd
+++ b/workflows/datapack_dataone/update_package_datapack.Rmd
@@ -15,22 +15,22 @@ Get a pre-existing package:
 ```{r, eval = F}
 packageId <- "the resource map"
 
-pkg <- getDataPackage(d1c_test, identifier=packageId, lazyLoad=TRUE, quiet=FALSE)
+dp <- getDataPackage(d1c_test, identifier=packageId, lazyLoad=TRUE, quiet=FALSE)
 ```
 
 ### Update the metadata
 
 Get the metadata identifier
 ```{r, eval = F}
-metadataId <- selectMember(pkg, name="sysmeta@formatId", value="https://eml.ecoinformatics.org/eml-2.2.0")
+metadataId <- selectMember(dp, name="sysmeta@formatId", value="https://eml.ecoinformatics.org/eml-2.2.0")
 ```
 
-Now we can update your data package to include the new metadata file
+Now we can update your data package to include the new metadata file using `replaceMember`
 ```{r, eval = F}
 eml_path <- "path/to/your/saved/eml.xml"
 write_eml(doc, eml_path)
 
-pkg <- replaceMember(pkg, metadataId, replacement=eml_path)
+dp <- replaceMember(dp, metadataId, replacement=eml_path)
 ```
 
 ### Modify the data files
@@ -54,22 +54,34 @@ If you want to change the formatId please use `updateSystemMetadata`
 
 ### Publish update
 
-Publishing a DOI with a UUID
+Once you are happy with your changes you can publish the package by using a UUID or DOI.
+
+##### Using a UUID:
 ```{r, eval = FALSE}
-newPackageId <- uploadDataPackage(d1c_test, pkg, public=FALSE, quiet=FALSE)
+newPackageId <- uploadDataPackage(d1c_test, dp, public=FALSE, quiet=FALSE)
 ```
 
-Using a Digital Object Identifier with a package.
+##### Using a DOI
+
+If you want to publish with a DOI (Digital Object Identifier) instead of a UUID (Universally Unique Identifier), (a) you need to change the `public` argument to `TRUE` and generate a DOI identifier. 
+
+**This should only be done after the package is finalized and has been thoroughly reviewed!**
+
+(1) Updating a package with a new DOI:
+
 A Digital Object Identifier (DOI) may be assigned to the metadata **DataObject**, using the `generateIdentifier`:
 ```{r, eval=FALSE}
 doi <- dataone::generateIdentifier(d1c_test@mn, "DOI")
-pkg <- replaceMember(pkg, metadataId, replacement=eml_path, newId = doi)
+dp <- replaceMember(dp, metadataId, replacement=eml_path, newId=doi)
 
-newPackageId <- uploadDataPackage(d1c_test, pkg, public=TRUE, quiet=FALSE)
+newPackageId <- uploadDataPackage(d1c_test, dp, public=TRUE, quiet=FALSE)
 ``` 
 
-If a package is ready to be public, you can change the `public` argument in the `uploadDataPackage()` call to `TRUE`.
+(2) Updating a package with a pre-issued DOI
+```{r, eval=FALSE}
+dp <- replaceMember(dp, metadataId, replacement=eml_path, newId="your pre-issued doi previously generated")
 
-If you want to publish with a DOI (Digital Object Identifier) instead of a UUID (Universally Unique Identifier), you can change the `use_doi` argument to `TRUE`. **This should only be done after the package is finalized and has been thoroughly reviewed!**
+newPackageId <- uploadDataPackage(d1c_test, dp, public=TRUE, quiet=FALSE)
+``` 
 
 Refresh the landing page at test.arcticdata.io/#view/... for this package and then follow the "newer version" link to view the latest.
