--- a/workflows/datapack_dataone/01_datapack_background.Rmd
+++ b/workflows/datapack_dataone/01_datapack_background.Rmd
@@ -16,9 +16,22 @@ Data packages are a class that has slots for `relations` (provenance), `objects`
 Using this example on arcticdata.io
 ```{r}
 d1c <- dataone::D1Client("PROD", "urn:node:ARCTIC")
+```
 
+To use the member node information, use the `mn` slot
+```{r}
+d1c@mn
+```
+
+```{block, type = "note"}
+To access the various slots using objects created by datapack and dataone requires the `@` which is different from what you might have seen in the past. This is because these use the [S4](https://adv-r.hadley.nz/s4.html) system.
+```
+
+Get an existing package from the Arctic Data Center
+```{r}
 dp <- dataone::getDataPackage(d1c, "resource_map_urn:uuid:1f9eee7e-2d03-43c4-ad7f-f300e013ab28")
 ```
+
 
 Check out the `objects` slot
 ```{r, eval=F}
