--- a/workflows/datapack_dataone/01_datapack_background.Rmd
+++ b/workflows/datapack_dataone/01_datapack_background.Rmd
@@ -13,6 +13,7 @@ Data packages are a class that has slots for `relations` (provenance), `objects`
 
 ### Navigating data packages
 
+#### Nodes
 Using this example on arcticdata.io
 ```{r}
 d1c <- dataone::D1Client("PROD", "urn:node:ARCTIC")
@@ -24,7 +25,7 @@ d1c@mn
 ```
 
 ```{block, type = "note"}
-To access the various slots using objects created by datapack and dataone requires the `@` which is different from what you might have seen in the past. This is because these use the [S4](https://adv-r.hadley.nz/s4.html) system.
+To access the various slots using objects created by datapack and dataone (e.g. `getSystemMetadata`) requires the `@` which is different from what you might have seen in the past. This is because these use the [S4](https://adv-r.hadley.nz/s4.html) system.
 ```
 
 Get an existing package from the Arctic Data Center
@@ -33,6 +34,7 @@ dp <- dataone::getDataPackage(d1c, "resource_map_urn:uuid:1f9eee7e-2d03-43c4-ad7
 ```
 
 
+#### Data
 Check out the `objects` slot
 ```{r, eval=F}
 dp@objects
@@ -43,18 +45,32 @@ Get the number for data and metadata files associated with this data package:
 length(dp@objects)
 ```
 
+Grab only the data pids
+```{r}
+names(dp@objects)
+```
 
 Get the file name:
 ```{r}
 dp@objects$`urn:uuid:e6390181-85e9-46a2-b2ba-e352ece51cc6`@sysmeta@fileName
 ```
 
+#### Provenance
 View the provenance as a dataTable. 
-
 ```{r}
 dp@relations$relations
 ```
 
+##### Search
+You can search by any of the `sysmeta` slots such as `fileName`, `formatId` and `identifier`:
+```{r, eval = F}
+metadataId <- selectMember(dp, name="sysmeta@ADD THE NAME OF THE SLOT", value="PATTERN TO SEARCH BY")
+```
+
+For example:
+```{r, eval = F}
+selectMember(dp, name="sysmeta@formatId", value="image/tiff")
+```
 
 ### Exercise
 ```
